--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,16 +8,15 @@
   box-sizing: border-box;
 }
 
-.str-chat__message-bubble {
+.str-chat__message--me {
   background-color: #4f46e5; /* Indigo */
   color: white;
-  border-radius: 18px;
 }
-.str-chat__message-text {
-  border-radius: 18px;
-}
-.str-chat__message--deleted-inner {
-  background-color: #333;
+
+.str-chat__message {
+  background-color: #f3f4f6; /* Light Gray */
+  color: black;
+  border-radius: 16px;
 }
 
 @layer utilities {
